--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
           <p class="footer-social-text">Subscribe</p>
           <form class="footer-form">
             <label for="footer-email">
-              <input class="footer-input" id="footer-email" type="footer-email" name="footer-email" placeholder="E-mail"/>
+              <input class="footer-input" id="footer-email" type="email" name="footer-email" placeholder="E-mail"/>
             </label>
             <button class="footer-btn" type="submit">Subscribe
               <svg class="footer-btn-icon" width="24" height="24">
@@ -433,30 +433,30 @@
         </button>
         <p class="modal-text">Leave your contacts and we will call you back</p>
         <form class="modal-box">
+         <div class="modal-input-box">
           <label class="modal-label" for="username">Name
-            <div class="modal-input-box">
              <input class="modal-input" id="username" type="text" name="username"/>
              <svg class="modal-icon" width="18" height="18">
               <use href="./images/icons.svg#icon-person"></use>
              </svg>
-            </div>
           </label>
+         </div>
+         <div class="modal-input-box">
           <label class="modal-label" for="phone">Phone
-            <div class="modal-input-box">
              <input class="modal-input" id="phone" type="text" name="phone"/>
              <svg class="modal-icon" width="18" height="18">
               <use href="./images/icons.svg#icon-phone"></use>
              </svg>
-            </div>
           </label>
+         </div>
+         <div class="modal-input-box">
           <label class="modal-label" for="email">Email
-            <div class="modal-input-box">
              <input class="modal-input" id="email" type="text" name="email"/>
              <svg class="modal-icon" width="18" height="18">
               <use href="./images/icons.svg#icon-email"></use>
              </svg>
-            </div>
           </label>
+         </div>
          <div class="modal-coment-box">
           <label class="modal-label" for="comment">Comment
               <textarea class="modal-coment" name="comment" id="comment" placeholder="Text input"></textarea>
