--- a/index.html
+++ b/index.html
@@ -434,33 +434,35 @@
         <p class="modal-text">Leave your contacts and we will call you back</p>
         <form class="modal-box">
          <div class="modal-input-box">
-          <label class="modal-label" for="username">Name
+          <label class="modal-label" for="username">Name</label>
+          <div class="modal-wraper">
              <input class="modal-input" id="username" type="text" name="username"/>
              <svg class="modal-icon" width="18" height="18">
               <use href="./images/icons.svg#icon-person"></use>
              </svg>
-          </label>
+          </div>
          </div>
          <div class="modal-input-box">
-          <label class="modal-label" for="phone">Phone
+          <label class="modal-label" for="phone">Phone</label>
+          <div class="modal-wraper">
              <input class="modal-input" id="phone" type="text" name="phone"/>
              <svg class="modal-icon" width="18" height="18">
               <use href="./images/icons.svg#icon-phone"></use>
              </svg>
-          </label>
+          </div>
          </div>
          <div class="modal-input-box">
-          <label class="modal-label" for="email">Email
+          <label class="modal-label" for="email">Email</label>
+          <div class="modal-wraper">
              <input class="modal-input" id="email" type="text" name="email"/>
              <svg class="modal-icon" width="18" height="18">
               <use href="./images/icons.svg#icon-email"></use>
              </svg>
-          </label>
+          </div>
          </div>
          <div class="modal-coment-box">
-          <label class="modal-label" for="comment">Comment
+          <label class="modal-label" for="comment">Comment</label>
               <textarea class="modal-coment" name="comment" id="comment" placeholder="Text input"></textarea>
-          </label>
          </div>
          <div class="modal-field check-field">
           <input class="input-check visually-hidden" id="user-privacy" name="user-privacy" type="checkbox" value="true"/>
