--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
         <div class="footer-subscribe">
           <p class="footer-social-text">Subscribe</p>
           <form class="footer-form">
-            <label for="footer-email">
+            <label class="footer-label" for="footer-email">
               <input class="footer-input" id="footer-email" type="email" name="footer-email" placeholder="E-mail"/>
             </label>
             <button class="footer-btn" type="submit">Subscribe
@@ -434,10 +434,10 @@
         <p class="modal-text">Leave your contacts and we will call you back</p>
         <form class="modal-box">
          <div class="modal-input-box">
-          <label class="modal-label" for="username">Name</label>
+          <label class="modal-label" for="user-name">Name</label>
           <div class="modal-wraper">
-             <input class="modal-input" id="username" type="text" name="username"/>
-             <svg class="modal-icon" width="18" height="18">
+             <input class="modal-input" id="user-name" type="text" name="user-name"/>
+             <svg class="modal-icon" width="18" height="24">
               <use href="./images/icons.svg#icon-person"></use>
              </svg>
           </div>
@@ -446,7 +446,7 @@
           <label class="modal-label" for="phone">Phone</label>
           <div class="modal-wraper">
              <input class="modal-input" id="phone" type="text" name="phone"/>
-             <svg class="modal-icon" width="18" height="18">
+             <svg class="modal-icon" width="18" height="24">
               <use href="./images/icons.svg#icon-phone"></use>
              </svg>
           </div>
@@ -455,14 +455,14 @@
           <label class="modal-label" for="email">Email</label>
           <div class="modal-wraper">
              <input class="modal-input" id="email" type="text" name="email"/>
-             <svg class="modal-icon" width="18" height="18">
+             <svg class="modal-icon" width="18" height="24">
               <use href="./images/icons.svg#icon-email"></use>
              </svg>
           </div>
          </div>
          <div class="modal-coment-box">
-          <label class="modal-label" for="comment">Comment</label>
-              <textarea class="modal-coment" name="comment" id="comment" placeholder="Text input"></textarea>
+          <label class="modal-label" for="user-comment">Comment</label>
+              <textarea class="modal-coment" name="user-comment" id="user-comment" placeholder="Text input"></textarea>
          </div>
          <div class="modal-field check-field">
           <input class="input-check visually-hidden" id="user-privacy" name="user-privacy" type="checkbox" value="true"/>
